# free-gpu

./: .gitignore  README.md  analysis.ipynb  app.py  dashboard.html  gpu_compute_database - Database.csv  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml
docs/: index.html
free_gpu/: __init__.py  cli.py  data.py  gpu_compute_database.csv  http_app.py  llmfit_adapter.py  mcp_server.py  models.py  planner.py  tui.py  tui.tcss
tests/: __init__.py  test_planner.py
