[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "free-gpu"
version = "0.1.0"
description = "Plan local and free-tier GPU workflows around llmfit and curated provider data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["textual>=0.80,<0.90"]

[project.optional-dependencies]
mcp = ["mcp"]

[project.scripts]
free-gpu = "free_gpu.cli:main"
free-gpu-mcp = "free_gpu.mcp_server:main"

[tool.setuptools]
packages = ["free_gpu"]
